syntax = "proto3";

package auth.v1;

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}

enum TokenType {
    TOKEN_TYPE_UNSPECIFIED = 0;
    TOKEN_TYPE_BEARER = 1;
}

message LoginRequest {
    string account = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    TokenType token_type = 2;
}

message LogoutRequest {
    string account = 1;
    string password = 2;
}

message LogoutResponse {
    int32 code = 1;
    string message = 2;
}
